--- a/no.html
+++ b/no.html
@@ -49,7 +49,7 @@
         }
         
         #answer {
-            margin-top: -330px;
+            margin-top: -370px;
             color: #F47A4E;
             z-index: 2;
         }
@@ -172,7 +172,7 @@
                             </h2>
                         </div>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                            <div class="card-body">Below chart displays the most updated data regarding contaminants in tap water. Each bar represents a single substance. Contaminants above EPA standarts are <span style="color:#F47A4E;">highlighted in red</span>.
+                            <div class="card-body">Below chart displays the most updated data regarding contaminants in tap water. Each bar represents a single substance. Contaminants above EPA standarts are <span style="color:#F47A4E;"><b>highlighted in red</b></span>.
 
                                 <div class="row d-flex justify-content-center" id="main-graph">
                                     <iframe src="https://prattsavi.github.io/DrinkingWater/visuals/lolli_graph.html" frameborder="0" width="600" height="400"></iframe>
