--- a/no.html
+++ b/no.html
@@ -208,6 +208,10 @@
             padding-right: 20px;
             padding-bottom: 10px;
         }
+        
+        hr {
+            border: 0.25px solid white;
+        }
     </style>
 
     <title>Drinking Water!</title>
@@ -893,6 +897,19 @@
                         });
                     });
                 </script>
+
+
+                <!-- Footer -->
+                <footer class="page-footer font-small mt-5">
+                    <hr width="100%" size="10">
+                    <!-- Copyright -->
+                    <div class="footer-copyright text-center py-1">Designed By:
+                        <a href="https://commons.pratt.edu/savi/"> SAVI</a> & <a href="https://www.saraeichnergis.com/">Sara Eichner</a>
+                    </div>
+                    <!-- Copyright -->
+
+                </footer>
+                <!-- Footer -->
 
 </body>
 
