--- a/no.html
+++ b/no.html
@@ -904,7 +904,7 @@
                     <hr width="100%" size="10">
                     <!-- Copyright -->
                     <div class="footer-copyright text-center py-1">Designed By:
-                        <a href="https://commons.pratt.edu/savi/"> SAVI</a> & <a href="https://www.saraeichnergis.com/">Sara Eichner</a>
+                        <a href="https://commons.pratt.edu/savi/" style="color: white"> SAVI</a> & <a href="https://www.saraeichnergis.com/">Sara Eichner</a>
                     </div>
                     <!-- Copyright -->
 
