--- a/no.html
+++ b/no.html
@@ -316,7 +316,7 @@
                                                 <h5 class="card-title material">Arsenic</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -327,7 +327,7 @@
                                                 <h5 class="card-title material-bad">Bromate</h5>
                                                 <p class="card-text material-bad"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material-bad"><b>Violation:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -338,7 +338,7 @@
                                                 <h5 class="card-title material">Chlorine</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -352,7 +352,7 @@
                                                 <h5 class="card-title material">Floride</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -363,7 +363,7 @@
                                                 <h5 class="card-title material">Haloacetic Acids</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -374,7 +374,7 @@
                                                 <h5 class="card-title material">TOC</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -388,7 +388,7 @@
                                                 <h5 class="card-title material">Total Tri.</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -399,7 +399,7 @@
                                                 <h5 class="card-title material-bad">Uranium</h5>
                                                 <p class="card-text material-bad"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material-bad"><b>Violation:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -410,7 +410,7 @@
                                                 <h5 class="card-title material">Copper</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -424,7 +424,7 @@
                                                 <h5 class="card-title material">Chloride</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -435,7 +435,7 @@
                                                 <h5 class="card-title material">Odor</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -446,7 +446,7 @@
                                                 <h5 class="card-title material">Sp. Conductance</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -460,7 +460,7 @@
                                                 <h5 class="card-title material">Sulfate</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -471,7 +471,7 @@
                                                 <h5 class="card-title material">Dissolved Solids</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -482,7 +482,7 @@
                                                 <h5 class="card-title material">Turbidity</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -495,7 +495,7 @@
                                                 <h5 class="card-title material">Lead</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
@@ -506,7 +506,7 @@
                                                 <h5 class="card-title material">pH</h5>
                                                 <p class="card-text material"><b>Source:</b> Arsenic enters water through erosion of natural deposits; runoff from orchards; glass and electroics production wastes.</p>
                                                 <p class="card-text material"><b>Compliance:</b><br> Average Level: 11ppb<br> EPA limit: 10 ppb<br> EPA Goal: 4ppb</p>
-                                                <a href="https://commons.pratt.edu/savi/" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                                <a href="https://prattsavi.github.io/DrinkingWater/single" target="_blank" style="color: black"> <i class="fa fa-caret-down" aria-hidden="true"></i></a>
                                             </div>
                                         </div>
                                     </div>
