--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </div>
 
     <script type="text/javascript">
-        $('button1').on('click', function() {
+        $('#button1').on('click', function(e) {
             console.log('kfkejb');
         })
     </script>
