--- a/single.html
+++ b/single.html
@@ -244,7 +244,7 @@
                             "size": 12
                         },
                         "showarrow": false,
-                        "text": "EPA Goals",
+                        "text": "Goals",
                         "x": 2018.75,
                         "y": 0.504
                     }],
