updated PLotly on JS

--- a/no.html
+++ b/no.html
@@ -1358,7 +1358,8 @@
                                         "zeroline": false
                                     }
                                 }, {
-                                    "responsive": true
+                                    "responsive": true,
+                                    "displayModeBar": false
                                 }
                             )
                         };
