--- a/no.html
+++ b/no.html
@@ -296,7 +296,7 @@
                     <div class="card">
                         <div class="card-header p-0 mt-1" id="headingZero">
                             <h2 class="mb-0">
-                                <a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">Where Does My Water Come From <i class="material-icons">add</i></a>
+                                <a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">Where Does My Water Come From? <i class="material-icons">add</i></a>
                             </h2>
                             <hr width="750px" size="5">
                         </div>
@@ -315,7 +315,7 @@
                     <div class="card">
                         <div class="card-header p-0 mt-1" id="headingTwo">
                             <h2 class="mb-0">
-                                <a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Learn More<i class="material-icons">add</i></a>
+                                <a class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Learn More...<i class="material-icons">add</i></a>
                             </h2>
                             <hr width="750px" size="5">
                         </div>
