--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
 
             if (zipcode === '11222') {
                 window.open('https://prattsavi.github.io/DrinkingWater/no.html', '_blank');
+            } else if (zipcide === '11223') {
+                window.open('https://prattsavi.github.io/DrinkingWater/yes.html', '_blank');
             } else {
-                alert('Please enter 11222 to\ngo to the "no!" page');
+                alert('Please enter\n 11222 to go to the "no!" page,\n11223 to go to the "yes!" page.');
             }
 
 
