--- a/no.html
+++ b/no.html
@@ -308,7 +308,7 @@
 
                         <div id="collapseZero" class="collapse" aria-labelledby="headingZero" data-parent="#accordionExample">
                             <div class="card-body ml-0">
-                                <img src="https://raw.githubusercontent.com/PrattSAVI/DrinkingWater/main/img/Map_1-01.svg" alt="zipcode map" width="715px" height="475px" style="border-style: solid;border-width: 1px;border-color: white;border-radius:10px;z-index: -3;">
+                                <img src="https://raw.githubusercontent.com/PrattSAVI/DrinkingWater/main/img/Map_1.png" alt="zipcode map" width="715px" height="622px" style="border-style: solid;border-width: 1px;border-color: white;border-radius:10px;z-index: -3;">
                                 <p id='text-def'><b>New York City</b> gets its drinking water from 19 reservoirs and three controlled lakes spread across a nearly 2,000-square-mile watershed. The watershed is located upstate in portions of the Hudson Valley and Catskill
                                     Mountains that are as far as 125 miles north of the city. New York City’s water supply system is comprised of two primary water supplies called the Catskill/Delaware and Croton. </p>
 
