--- a/single.html
+++ b/single.html
@@ -148,24 +148,26 @@
 
                     <h5 class="material">Arsenic</h5>
                     <p class='material-title'>SOURCE</p>
-                    <p class='material'>Arsenic enters the water system through erosion of natural deposits; runoff from orchards; glass and electronics production wastes.</p>
+                    <p class='material'>Arsenic enters the water system through erosion of natural deposits or from agricultural and industrial practices. </p>
 
                     <p class='material-title'>DESCRIPTION</p>
-                    <p class='material'>An inorganic contaminant regulated under the Phase II/V Rules. Arsenic is a semi-metal element in the periodic table. It is odorless and tasteless. It can enter drinking water supplies from natural deposits in the earth or from agricultural
-                        and industrial practices. Some people who drink water containing arsenic in excess of the MCL over many years could experience skin damage or problems with their circulatory system, and may have an increased risk of getting cancer.
-                        Arsenic has been linked to a number of cancers. These include cancer of the bladder, lungs, skin, kidney, nasal passages, liver, and prostate.</p>
+                    <p class='material'>Arsenic is a semi-metal element in the periodic table. It is odorless and tasteless. An inorganic contaminant regulated under the Phase II/V Rules. In 2001, under the Arsenic Rule, EPA adopted a lower standard for arsenic in drinking
+                        water. The lower standard of 10 parts per billion (ppb) replaced the prior standard of 50 ppb. Non-cancer effects of arsenic can include: thickening and discoloration of the skin, stomach pain, nausea, vomiting, diarrhea, numbness
+                        in hands and feet, partial paralysis, and blindness.<br> Arsenic has been linked to a number of cancers. These include cancer of the bladder, lungs, skin, kidney, nasal passages, liver, and prostate.
+                    </p>
 
                     <p class='material-title'>WHAT ARE WE DOING ABOUT IT?</p>
-                    <p class='material'>The water utility addressed the arsenic non compliance by doing this and that. Levels have continued to go down in response and there is no risk to residents in 2020.</p>
+                    <p class='material'>
+                        If your water contains between 10 ppb and 50 ppb arsenic, your chance of developing health problems increases. We recommend you not drink water containing these levels or use it for food preparation over the long term. In either case, you will need to
+                        balance the health risks, costs, and convenience when deciding whether or not to continue to use the water supply. If the water contains more than 50 ppb arsenic, we recommend you stop using it for drinking and food preparation.<br>                        Since arsenic does not pass through your skin easily and does not easily evaporate, it is okay to bathe and clean with water unless it contains more than 500 ppb.
+                    </p>
 
                     <p class='material-title'>HOW DO WE TREAT WATER WITH THIS CONTAMINANT?</p>
-                    <p class='material'>Dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit,
-                        sed diam</p>
+                    <p class='material'>
+                        Arsenic is removed from water through filtration and conversion of trivalent arsenic (As+3) to the pentavalent state (As+5) through aeration and the addition of potassium permanganate and ferric chloride. Link to more detailed description here.
+                    </p>
 
-                    <p class='material-title'>WHAT CAN YOU DO?</p>
-                    <p class='material'>Dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit,
-                        sed diam.</p>
-
+                    <p class='material-title'>Levels Over Time</p>
                     <div class="row">
                         <div id="bccc7441-d9b9-49c5-b287-c9acdb816cf3" class="plotly-graph-div" style="height:350px; width:550px;"></div>
                     </div>
@@ -187,6 +189,7 @@
         </div>
     </footer>
 
+    <!-- Plotly Graph -->
     <script type="text/javascript">
         window.PLOTLYENV = window.PLOTLYENV || {};
 
@@ -205,7 +208,7 @@
                     "mode": "markers+lines",
                     "type": "scatter",
                     "x": ["2016", "2017", "2018", "2019"],
-                    "y": [6.0, 9.0, 12.0, 9.9]
+                    "y": [6.0, 9.0, 12.0, 11]
                 }, {
                     "line": {
                         "color": "#878787",
@@ -244,7 +247,7 @@
                             "size": 12
                         },
                         "showarrow": false,
-                        "text": "Goals",
+                        "text": "Goal",
                         "x": 2018.85,
                         "y": 0.504
                     }],
@@ -735,7 +738,7 @@
                             }
                         }
                     },
-                    "width": 550,
+                    "width": 630,
                     "xaxis": {
                         "nticks": 4,
                         "showgrid": false
